2009-11-12  Steve Falkenburg  <sfalken@apple.com>

        Reviewed by Stephanie Lewis.

        Remove LIBRARY directive from def file to fix Debug_All target.

        * JavaScriptCore.vcproj/JavaScriptCore/JavaScriptCore.def:

2009-11-12  Gustavo Noronha Silva  <gustavo.noronha@collabora.co.uk>

        Rubber-stamped by Holger Freyther.

        Revert r50204, since it makes DRT crash on 32 bits release builds
        for GTK+.

        * wtf/FastMalloc.h:

2009-11-12  Oliver Hunt  <oliver@apple.com>

        Reviewed by Gavin Barraclough.

        Start unifying entry logic for function and eval code.

        Eval now uses a ret instruction to end execution, and sets up
        a callframe more in line with what we do for function entry.

        * bytecompiler/BytecodeGenerator.cpp:
        (JSC::BytecodeGenerator::emitReturn):
        * interpreter/Interpreter.cpp:
        (JSC::Interpreter::execute):
        * parser/Nodes.cpp:
        (JSC::EvalNode::emitBytecode):

2009-11-12  Richard Moe Gustavsen  <richard.gustavsen@nokia.com>

        Reviewed by Kenneth Rohde Christiansen.

        [Qt] Disable pthread_setname_np.

        This allows Qt builds on Mac from 10.6 to run on earlier version
        where this symbol is not present.
        https://bugs.webkit.org/show_bug.cgi?id=31403

        * wtf/Platform.h:

2009-11-12  Thiago Macieira <thiago.macieira@nokia.com>

        Reviewed by Kenneth Rohde Christiansen.

        [Qt] Fix linking on Linux 32-bit.

        It was missing the ".text" directive at the top of the file,
        indicating that code would follow. Without it, the assembler created
        "NOTYPE" symbols, which would result in linker errors.
        https://bugs.webkit.org/show_bug.cgi?id=30863

        * jit/JITStubs.cpp:

2009-11-11  Laszlo Gombos  <laszlo.1.gombos@nokia.com>

        Reviewed by Alexey Proskuryakov.

        Refactor multiple JavaScriptCore threads
        https://bugs.webkit.org/show_bug.cgi?id=31328
